# AFFD

./: .gitignore  CMakeLists.txt  affd_line.f.glsl  affd_line.fs  affd_line.v.glsl  affd_truth.f.glsl  common_data.cc  common_data.h  cuda_calc.cu  obj_data.cc  obj_data.h  push.sh  triangle.c  triangle.cc  triangle.h  v  view.cc  view.h  widget.cc  widget.h
split_library/: CMakeLists.txt  common_data_structure.cpp  common_data_structure.h  source_file_test.cpp  split.cpp  split.h
split_library/test/: source_file_test.cpp
